# wgrib2

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLING  README.clang  README.g2clib  README.jpeg2000  README.md  README.open64  README.openmp  README.optimize_for_cpu  Release_Notes.wgrib2.v2.0.8.txt  Release_Notes.wgrib2.v2.0.9.txt  build_all.sh  build_exe.sh  build_lib.sh  compile.sh  compile_exe.sh  compile_lib.sh  makefile  my_cpu  tar_all
.github/workflows/: Intel.yml  Linux_options.yml  Spack.yml  dev2.yml  developer.yml  docs.yml  main.yml
CMakeModules/Modules/: FindNetCDF.cmake  Findip2.cmake  Findsp.cmake
READMEs/: README.icc  README.icx
aux_progs/: CMakeLists.txt  README.md  gmerge.c  grb2.h  smallest_4.c  smallest_grib2.c  uint8.c
cmake/: PackageConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  README.SIMD  README.cygwin  README.icc  README.ipolates  README.md  README.ncep  README.netcdf4  tricks.cheap  tricks.ncep  tricks.wgrib2  user_guide.md
docs/web_docs/: 0xSec.html  AAIG.html  AAIGlong.html  EUMETSAT.html  Match_inv.html  N_ens.html  RT.html  S_1.html  Sec4.html  Sec5.html  Sec6.html  Sec_len.html  aerosol_size.html  aerosol_wavelength.html  alarm.html  ave.html  ave0.html  ave_fcst_ave_merge_fcst.html  ave_var.html  bin.html  bin_ieee_text_format.html  bitmap.html  box_ave.html  c_grb2_inq.html  c_grb2_mk_inv.html  callable_wgrib2.html  center.html  check_pdt_size.html  checksum.html  code_table.html  colon.html  compile_questions.html  config.html  convert_wgrib2.html  count.html  cress_lola.html  crlf.html  csv_long.html  ctl_ens.html  ctl_inv.html  (+255 more)
extra/: CMakeLists.txt
ftn_api/: CMakeLists.txt
gctpc/source/: CMakeLists.txt
grib2/: .gitignore  CMakeLists.txt  makefile  makefile_exec  makefile_lib
grib2/c_api/: CMakeLists.txt
grib2/cmake/: PackageConfig.cmake.in
grib2/ftn_api/: CMakeLists.txt
grib2/gctpc/source/: CMakeLists.txt
grib2/iplib.v3.0.0/: makefile
grib2/lib/: CMakeLists.txt
grib2/wgrib2/: CMakeLists.txt  Config.c  config.h  source-files.cmake
ip2lib_d/: config.h
lib/: makefile
spack/: package.py
src/: CMakeLists.txt  Config.c  ExtName.c  Grib.c  Hybrid.c  Mod_grib.c  New_grid.c  Set_metadata.c  Spectral_bands.c  Unmerge_fcst.c  check_dup_gribtable.sh  complex_pk.c  config.h.ori  dec_png_clone.c  decenc_openjpeg.c  geo.c  grb2.h  makefile  mk_kgds.c  mysql_speed_readme.txt  ncep_grids.c  openmp_util.c  proj4_initialize.c  simple_pk.c  units.c  wgrib2.h  wgrib2_api.h  wgrib2_meta.h.in
src/gribtables/: README
tests/: CMakeLists.txt  run_ftp_extra_large_tests.sh  run_ftp_large_tests.sh  run_ipolates_tests.sh  run_jpeg_tests.sh  run_wgrib2_aec_tests.sh  run_wgrib2_ftp_large_tests.sh  run_wgrib2_ftp_tests.sh  run_wgrib2_netcdf3_tests.sh  run_wgrib2_netcdf4_tests.sh  run_wgrib2_png_tests.sh  run_wgrib2_rpn_tests.sh  run_wgrib2_tests.sh  run_wgrib_tests.sh  test_ftn_api.sh  test_lib.sh  test_shared_lib.sh
tests/data/: gdas.t12z.pgrb2.1p00.anl.75r  gdaswave.t00z.wcoast.0p16.f000.grib2  large_png.grb2  ncep_grid_wmo.txt  nctab.table  ref_HGT.500_mb.ENS=low-res_ctl.2023043000_2023050600.asc  ref_WW3_Regional_US_West_Coast_20220718_0000.grib2.inv  ref_celsius.gdas.t12z.pgrb2.1p00.anl.75r.grib2.txt  ref_ecmwf.jul.grb1  ref_ecmwf.jul.grb1.inv  ref_fahrenheit.gdas.t12z.pgrb2.1p00.anl.75r.grib2.txt  ref_fv3lam.t00z.prslev.f000.grib2.inv  ref_gdaswave.t00z.wcoast.0p16.f000.grib2.inv  ref_grid.gdaswave.t00z.wcoast.0p16.f000.grib2.txt  ref_hrrr_grid.txt  ref_jpeg2simple.txt  ref_mercator_grid.txt  ref_merge_fcst.aqm.t12z.max_8hr_o3.227.grib2.txt  ref_nam12_grid.txt  ref_ncep_grid_130.txt  ref_ncep_grid_197.txt  ref_new_grid_earth_gdas.t12z.pgrb2.1p00.anl.75r.grib2.txt  ref_new_grid_gdas.t12z.pgrb2.1p00.anl.75r.grib2.txt  (+47 more)
web_docs/: GRIB.html  MM.html  Sec0.html  Sec3.html  YY.html  all_commands.html  c_wgrib2api.html  calling_wgrib2.html  csv.html  d.html  default_inv.html  elseif.html  end.html  err_bin.html  ext_name.html  fi.html  ftime.html  ftime2.html  function.html  g2clib.html  get_hex.html  gribify2.html  gribtable_used.html  grid_def.html  header.html  if_block.html  if_reg.html  if_structure.html  ijlat.html  ijsmall_grib.html  interpolation.html  inv.html  last0.html  lev0.html  ll2i.html  match_inv.html  nc_table.html  netcdf_2_grib_ostia.html  new_grid_intro.html  new_grid_ipopt.html  (+19 more)
wgrib/: CMakeLists.txt  wgrib.c
wgrib/docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
wgrib2/: CMakeLists.txt  Check_pdt_size.c  Config.c  Ens_processing.c  Ens_qc.c  Ensemble.c  GDT.c  Gctpc.c  Import_netcdf.c  Match.c  Match_inv.c  Misc.c  Netcdf.c  Netcdf_sup.c  New_grid.c  Proj4.c  RPN.c  Small_grib.c  Time_processing.c  addtime.c  aec_pk.c  check_dup_gribtable.sh  check_gribdat.sh  codetable_4_230.c  config.h  config.h.in  create_tables.sh  cubed_sphere2ll.c  dec_png_clone.c  decenc_openjpeg.c  enc_jpeg2000_clone.c  fnlist.c  fnlist.h  function.sh  gctpc_ll2xy.c  get_code_Table_0.0.sh  get_code_Table_3.15.sh  get_code_Table_3.8.sh  get_code_Table_4.0.sh  get_code_Table_4.10.sh  (+20 more)
wgrib2/ftn_api/: CMakeLists.txt
wgrib2/gctpc/: CMakeLists.txt
wgrib2/gctpc/source/: CMakeLists.txt  makefile  makefile.gctpc
wgrib2/gribtables/ecmwf/: create_ecmwf_gribtable.sh
wgrib2/gribtables/ncep/: README  get_gribtab.sh  gribtable
wmo_scripts/: get_BUFR02020.sh  get_CCT05.sh  get_CCT08.sh  get_CCT11.sh  get_CCT14.sh  get_code_Table_0.0.sh  get_code_Table_1.2.sh  get_code_Table_3.1.sh  get_code_Table_3.11.sh  get_code_Table_3.15.sh  get_code_Table_3.2.sh  get_code_Table_3.20.sh  get_code_Table_3.21.sh  get_code_Table_3.8.sh  get_code_Table_4.0.sh  get_code_Table_4.10.sh  get_code_Table_4.11.sh  get_code_Table_4.15.sh  get_code_Table_4.16.sh  get_code_Table_4.208.sh  get_code_Table_4.212.sh  get_code_Table_4.222.sh  get_code_Table_4.230.sh  get_code_Table_4.235.sh  get_code_Table_4.240.sh  get_code_Table_4.3.sh  get_code_Table_4.4.sh  get_code_Table_4.5_ncep.sh  get_code_Table_4.7.sh  get_code_Table_4.8.sh  get_code_Table_4.9.sh  get_code_Table_4.91.sh  get_code_Table_5.0.sh  get_code_Table_5.1.sh  get_code_Table_6.0.sh
(+3 files in other folders)
